RESOLVED FIXED238309
PushAPI.firePushEventWithNoPagesTimeout fails in debug builds
https://bugs.webkit.org/show_bug.cgi?id=238309
Summary PushAPI.firePushEventWithNoPagesTimeout fails in debug builds
Ben Nham
Reported 2022-03-23 21:47:25 PDT
PushAPI.firePushEventWithNoPagesTimeout fails in debug builds with this assertion: ASSERTION FAILED: m_connection /Volumes/Data/src/webkit/OpenSource/Source/WebKit/UIProcess/AuxiliaryProcessProxy.h(80) : IPC::Connection *WebKit::AuxiliaryProcessProxy::connection() const 1 0x117861389 WTFCrash 2 0x13447ef2b WTFCrashWithInfo(int, char const*, char const*, int) 3 0x135531ae7 WebKit::AuxiliaryProcessProxy::connection() const 4 0x136200842 WebKit::NetworkProcessProxy::terminate() 5 0x1362fa633 WebKit::WebsiteDataStore::terminateNetworkProcess() 6 0x1355d5cf5 -[WKWebsiteDataStore(WKPrivate) _terminateNetworkProcess] 7 0x108a67278 terminateNetworkProcessWhileRegistrationIsStored(WKWebViewConfiguration*) 8 0x108a69280 PushAPI_firePushEventWithNoPagesTimeout_Test::TestBody() 9 0x108fbba8b void testing::internal::HandleSehExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) 10 0x108f82ffa void testing::internal::HandleExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) 11 0x108f82f43 testing::Test::Run() 12 0x108f840c1 testing::TestInfo::Run() 13 0x108f85164 testing::TestSuite::Run() 14 0x108f941fb testing::internal::UnitTestImpl::RunAllTests() 15 0x108fc08eb bool testing::internal::HandleSehExceptionsInMethodIfSupported<testing::internal::UnitTestImpl, bool>(testing::internal::UnitTestImpl*, bool (testing::internal::UnitTestImpl::*)(), char const*) 16 0x108f93bba bool testing::internal::HandleExceptionsInMethodIfSupported<testing::internal::UnitTestImpl, bool>(testing::internal::UnitTestImpl*, bool (testing::internal::UnitTestImpl::*)(), char const*) 17 0x108f93aa5 testing::UnitTest::Run() 18 0x1086f5071 RUN_ALL_TESTS() 19 0x1086f5006 TestWebKitAPI::TestsController::run(int, char**) 20 0x108f52de2 main 21 0x10f22ccd0 worker/0 TestWebKitAPI.PushAPI.firePushEventWithNoPagesTimeout Crashed
Attachments
Patch (6.60 KB, patch)
2022-03-23 22:06 PDT, Ben Nham
no flags
Ben Nham
Comment 1 2022-03-23 22:06:51 PDT
Radar WebKit Bug Importer
Comment 2 2022-03-23 22:07:28 PDT
youenn fablet
Comment 3 2022-03-24 02:46:08 PDT
Regression from added assertion in https://bugs.webkit.org/show_bug.cgi?id=236844.
EWS
Comment 4 2022-03-24 10:21:41 PDT
Committed r291802 (248830@main): <https://commits.webkit.org/248830@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 455605 [details].
Ryan Haddad
Comment 5 2022-03-24 11:05:28 PDT
*** Bug 238241 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.