PushAPI.firePushEventWithNoPagesTimeout fails in debug builds https://bugs.webkit.org/show_bug.cgi?id=238309

Reviewed by Youenn Fablet.

Source/WebCore:

Export RegistrationDatabase::schemaVersion for tests to use.

* workers/service/server/RegistrationDatabase.cpp:
(WebCore::databaseFilename):
(WebCore::cleanOldDatabases):
* workers/service/server/RegistrationDatabase.h:

Tools:

This test was dying on an assertion in debug builds because we were calling
terminateNetworkProcessWhileRegistrationIsStored with a brand new WKWebsiteDataStore, which
wasn't associated with an active NetworkProcess connection since it was a brand new object.
Fix this by using the existing data store object instead.

Additionally, terminateNetworkProcessWhileRegistrationIsStored was waiting on the wrong
filename, so I changed the test to reference the correct filename.

* TestWebKitAPI/Tests/WebKitCocoa/PushAPI.mm:



Canonical link: https://commits.webkit.org/248830@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@291802 268f45cc-cd09-0410-ab3c-d52691b4dbfc